[metadata]
name = scikit-morf
version = attr: skmorf.__version__
url = https://github.com/adam2392/scikit-morf
author = Adam Li
maintainer = Adam Li
maintainer_email = ali39@jhu.edu
description = Scikit-MORF: Manifold random forests.
keywords = machine learning, manifold learning, random forest, decision trees
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
license = BSD-3-Clause
license_files = LICENSE
platforms = any
classifiers =
  Topic :: Scientific/Engineering
  Intended Audience :: Science/Research
  Intended Audience :: Developers
  License :: OSI Approved
  Topic :: Software Development
  Topic :: Scientific/Engineering
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX :: Linux
  Operating System :: MacOS
  Programming Language :: Python
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
project_urls =
#   Documentation = https://mne.tools/mne-icalabel
  Bug Reports = https://github.com/adam2392/scikit-morf/issues
  Source = https://github.com/adam2392/scikit-morf

[options]
python_requires = ~= 3.8
install_requires =
  numpy >= 1.16.0
  scipy >= 1.6
  scikit-learn >= 1.1.0
  setuptools
  importlib-resources; python_version<"3.9"
packages = find:
include_package_data = True

[options.extras_require]
full =
  cython >= 0.29
  matplotlib >= 3.1.0
  pandas >= 0.24.0

[aliases]
test = pytest

[tool:pytest]
# disable-pytest-warnings should be removed once we rewrite tests
# using yield with parametrize
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
addopts =
    --ignore build_tools
    --ignore benchmarks
    --ignore doc
    --ignore examples
    --ignore maint_tools
    --ignore asv_benchmarks
    --doctest-modules
    --disable-pytest-warnings
    --color=yes
    -rxXs

filterwarnings =
    ignore:the matrix subclass:PendingDeprecationWarning

[wheelhouse_uploader]
artifact_indexes=
    # Wheels built by the "Wheel builder" workflow in GitHub actions:
    # https://github.com/scikit-learn/scikit-morf/actions?query=workflow%3A%22Wheel+builder%22
    https://pypi.anaconda.org/scikit-morf-wheels-staging/simple/scikit-morf/

# [flake8]
# # max line length for black
# max-line-length = 88
# target-version = ['py37']
# # Default flake8 3.5 ignored flags
# ignore=
#     E24,   # check ignored by default in flake8. Meaning unclear.
#     E121,  # continuation line under-indented
#     E123,  # closing bracket does not match indentation
#     E126,  # continuation line over-indented for hanging indent
#     E203,  # space before : (needed for how black formats slicing)
#     E226,  # missing whitespace around arithmetic operator
#     E704,  # multiple statements on one line (def)
#     E731,  # do not assign a lambda expression, use a def
#     E741,  # do not use variables named ‘l’, ‘O’, or ‘I’
#     W503,  # line break before binary operator
#     W504   # line break after binary operator
# exclude=
#     .git,
#     __pycache__,
#     dist,
#     sklearn/externals,
#     doc/_build,
#     doc/auto_examples,
#     doc/tutorial,
#     build

# It's fine not to put the import at the top of the file in the examples
# folder.
per-file-ignores =
    examples/*: E402
    doc/conf.py: E402

[check-manifest]
# ignore files missing in VCS
ignore =
    sklearn/linear_model/_sag_fast.pyx
    sklearn/utils/_seq_dataset.pyx
    sklearn/utils/_seq_dataset.pxd
    sklearn/utils/_weight_vector.pyx
    sklearn/utils/_weight_vector.pxd
